AAP18813 - added peer review changes

--- a/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
@@ -8,9 +8,9 @@ ifdef::context[:parent-context: {context}]
 
 Token-based authentication permits authentication of third-party tools and services with the platform through integrated OAuth 2 token support, and allows you to access external applications without having to store your password on disk.
 
-For more information on the OAuth2 specification, see link:https://docs.google.com/document/d/1mEYguv3V0WUUHBMc8tsgqlK8RB3ro8IZSlQmMuFfhww/edit#heading=h.x3j3jrhlprvm[The OAuth 2.0 Authorization Framework].
+For more information on the OAuth2 specification, see link:https://datatracker.ietf.org/doc/html/rfc6749[The OAuth 2.0 Authorization Framework].
 
-For more information on using the `manage` utility to create tokens, see link:https://docs.google.com/document/d/1mEYguv3V0WUUHBMc8tsgqlK8RB3ro8IZSlQmMuFfhww/edit#heading=h.x3j3jrhlprvm[Token and session management].
+For more information on using the `manage` utility to create tokens, see xref:ref-controller-token-session-management[Token and session management].
 
 include::assembly-controller-applications.adoc[leveloffset=+1]
 include::platform/proc-controller-apps-create-tokens.adoc[leveloffset=+1]
@@ -25,5 +25,5 @@ include::platform/ref-controller-expire-sessions.adoc[leveloffset=+3]
 include::platform/ref-controller-clear-sessions.adoc[leveloffset=+3]
 
 ifdef::parent-context[:context: {parent-context}]
-ifndef::parent-context[:!context:]
+ifndef::parent-context[:!context:] 
   
