--- a/downstream/modules/platform/proc-controller-create-application.adoc
+++ b/downstream/modules/platform/proc-controller-create-application.adoc
@@ -19,9 +19,9 @@ The *Create Application* page opens.
 
 . Enter the following details:
 +
-Name:: (required) Enter a name for the application you want to create
-Description:: (optional) Include a short description for your application
-Organization:: (required) Select an organization with which this application is associated
+Name:: (required) Enter a name for the application you want to create.
+Description:: (optional) Include a short description for your application.
+Organization:: (required) Select an organization with which this application is associated.
 Authorization grant type:: (required) Select one of the grant types to use for the user to get tokens for this application.
 For more information, see xref:ref-gw-application-functions[Application functions] for more information about grant types.
 Client Type:: (required) Select the level of security of the client device.
