--- a/downstream/modules/platform/proc-controller-apps-create-tokens.adoc
+++ b/downstream/modules/platform/proc-controller-apps-create-tokens.adoc
@@ -21,7 +21,7 @@ When no tokens are present, the *Tokens* screen prompts you to add them.
 . Click btn:[Create token] to open the *Create Token* window.
 . Enter the following details:
 +
-Application:: enter the name of the application with which you want to associate your token. Alternatively, you can search for it by clicking the Browse. This opens a separate window that enables you to choose from the available options. Select Name from the filter list to filter by name if the list is extensive. 
+Application:: Enter the name of the application with which you want to associate your token. Alternatively, you can search for it by clicking btn:[Browse]. This opens a separate window that enables you to choose from the available options. Select *Name* from the filter list to filter by name if the list is extensive. 
 +
 [NOTE]
 ====
