Update title attributes for navigator (#1891)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -348,7 +348,7 @@
 :TitleContainerizedInstall: Containerized installation
 //
 // titles/navigator-guide
-:TitleNavigatorGuide: Using content creator
+:TitleNavigatorGuide: Using content navigator
 //
 // titles/aap-hardening
 :TitleHardening: Hardening and compliance
