--- a/downstream/assemblies/platform/assembly-migrate-legacy-venv-to-ee.adoc
+++ b/downstream/assemblies/platform/assembly-migrate-legacy-venv-to-ee.adoc
@@ -1,16 +1,9 @@
-
-
 ifdef::context[:parent-context: {context}]
-
-
 
 [id="upgrading-to-ees"]
 = Migrating to {ExecEnvName}
 
-
 :context: upgrading-to-ees
-
-
 
 // [role="_abstract"]
 
@@ -34,7 +27,7 @@ include::dev-guide/assembly-virt-env-to-ee.adoc[leveloffset=+1]
 // Remove comments once 2.2 version of the docs are published.
 //== Additional resources
 
-//* See the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/ansible_navigator_creator_guide/index[Red Hat Ansible Automation Platform Creator Guide] for more information on migrating to {ExecEnvName}.
+//* See the link:{LinkNavigatorGuide}/index[Red Hat Ansible Automation Platform Creator Guide] for more information on migrating to {ExecEnvName}.
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
