--- a/downstream/assemblies/troubleshooting-aap/assembly-troubleshoot-playbooks.adoc
+++ b/downstream/assemblies/troubleshooting-aap/assembly-troubleshoot-playbooks.adoc
@@ -3,6 +3,7 @@
 
 = Playbooks
 
-You can use {Navigator} to interactively troubleshoot your playbook. For more information about troubleshooting a playbook with {Navigator}, see
-link:{LinkNavigatorGuide}/assembly-troubleshooting-navigator_ansible-navigator[Troubleshooting Ansible content with {Navigator}]
+You can use {Navigator} to interactively troubleshoot your playbook.
+For more information about troubleshooting a playbook with {Navigator}, see
+link:{URLNavigatorGuide}/assembly-troubleshooting-navigator_ansible-navigator[Troubleshooting Ansible content with {Navigator}]
 in the _{TitleNavigatorGuide}_ Guide.
