--- a/downstream/modules/devtools/proc-devtools-extension-run-ansible-navigator.adoc
+++ b/downstream/modules/devtools/proc-devtools-extension-run-ansible-navigator.adoc
@@ -24,6 +24,6 @@ image:devtools-extension-navigator-tasks.png[Tasks in ansible-navigator output]
 Type the number next to a task to review the task results.
 
 For more information on running playbooks with {Navigator}, see
-link:{LinkNavigatorGuide}/assembly-execute-playbooks-navigator_ansible-navigator#proc-execute-playbook-tui_execute-playbooks-navigator[Executing a playbook from automation content navigator]
+link:{URLNavigatorGuide}/assembly-execute-playbooks-navigator_ansible-navigator#proc-execute-playbook-tui_execute-playbooks-navigator[Executing a playbook from automation content navigator]
 in the _{TitleNavigatorGuide}_ Guide.
 
