--- a/downstream/modules/devtools/proc-devtools-testing-playbook.adoc
+++ b/downstream/modules/devtools/proc-devtools-testing-playbook.adoc
@@ -26,6 +26,6 @@ The output is displayed in the terminal.
 You can inspect the results and step into each play and task that was executed.
 
 For more information about running playbooks, refer to 
-link:{LinkNavigatorGuide}/assembly-execute-playbooks-navigator_ansible-navigator[Running Ansible playbooks with automation content navigator]
+link:{URLNavigatorGuide}/assembly-execute-playbooks-navigator_ansible-navigator[Running Ansible playbooks with automation content navigator]
 in the _{TitleNavigatorGuide}_ guide.
 
