Update topology doc title
Update the topology doc title from "Tested deployment models for Ansible Automation Platform" to "Tested deployment models" per Miro board docs titles.

--- a/downstream/titles/topologies/master.adoc
+++ b/downstream/titles/topologies/master.adoc
@@ -5,7 +5,7 @@ include::attributes/attributes.adoc[]
 
 // Book Title
 
-= Tested deployment models for Ansible Automation Platform
+= Tested deployment models
 
 include::{Boilerplate}[]
 
