--- a/downstream/modules/topologies/ref-rpm-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-a.adoc
@@ -4,6 +4,10 @@
 The enterprise topology is intended for organizations that require {PlatformNameShort} to be deployed with redundancy or higher compute for large volumes of automation.
 
 == Infrastructure topology
+The following diagram outlines the infrastructure topology that Red Hat has tested with this deployment model that customers can use when self-managing {PlatformNameShort}:
+
+.Infrastructure topology diagram
+image::rpm-b-env-a.png[RPM enterprise topology diagram]
 
 Each virtual machine (VM) has been tested with the following component requirements: 16 GB RAM, 4 CPUs, 60 GB local disk, and 3000 IOPS. 
 
@@ -15,9 +19,9 @@ Each virtual machine (VM) has been tested with the following component requireme
 | 2 | {ControllerNameStart} | automationcontroller
 | 2 | {PrivateHubNameStart} | automationhub
 | 2 | {EDAName} | automationedacontroller
-| 1 | {AutomationMeshStart} hop node | hop_nodes
+| 1 | {AutomationMeshStart} hop node | execution_nodes
 | 2 | {AutomationMeshStart} execution node | execution_nodes
-| 1 | Externally managed database service | external_database
+| 1 | Externally managed database service | N/A
 | 1 | HAProxy load balancer in front of platform gateway (externally managed) | N/A
 |====
 
@@ -62,3 +66,92 @@ Red Hat has tested the following configurations to install and run {PlatformName
 | 8443 | TCP | HTTPS | Platform gateway | Platform gateway
 | 50051 | TCP | gRPC | Platform gateway | Platform gateway
 |====
+
+== Example enterprise inventory file
+Use the following example inventory file to perform an installation for this topology: 
+
+[subs="+attributes"]
+----
+# This is the enterprise installer inventory file
+# Please consult the docs if you are unsure what to add
+# For all optional variables please consult the Red Hat documentation:
+# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/rpm_installation
+
+# This section is for your platform gateway hosts
+# -----------------------------------------------------
+[automationgateway]
+gateway1.example.org
+gateway2.example.org
+
+# This section is for your {ControllerName} hosts
+# -----------------------------------------------------
+[automationcontroller]
+controller1.example.org
+controller2.example.org
+
+[automationcontroller:vars]
+peers=execution_nodes
+
+# This section is for your {PlatformNameShort} execution hosts
+# -----------------------------------------------------
+[execution_nodes]
+hop1.example.org node_type='hop'
+exec1.example.org
+exec2.example.org
+
+# This section is for your {HubName} hosts
+# -----------------------------------------------------
+[automationhub]
+hub1.example.org
+hub2.example.org
+
+# This section is for your {EDAcontroller} hosts
+# -----------------------------------------------------
+[automationedacontroller]
+eda1.example.org
+eda2.example.org
+
+[all:vars]
+
+# Common variables
+# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/rpm_installation/appendix-inventory-files-vars#ref-general-inventory-variables
+# -----------------------------------------------------
+registry_username=<your RHN username>
+registry_password=<your RHN password>
+
+# Platform gateway
+# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/rpm_installation/appendix-inventory-files-vars#ref-gateway-variables
+# -----------------------------------------------------
+automationgateway_admin_password=<set your own>
+automationgateway_pg_host=<set your own>
+automationgateway_pg_database=<set your own>
+automationgateway_pg_username=<set your own>
+automationgateway_pg_password=<set your own>
+
+# {ControllerNameStart}
+# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/rpm_installation/appendix-inventory-files-vars#ref-controller-variables
+# -----------------------------------------------------
+admin_password=<set your own>
+pg_host=<set your own>
+pg_database=<set your own>
+pg_username=<set your own>
+pg_password=<set your own>
+
+# {HubNameStart}
+# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/rpm_installation/appendix-inventory-files-vars#ref-hub-variables
+# -----------------------------------------------------
+automationhub_admin_password=<set your own>
+automationhub_pg_host=<set your own>
+automationhub_pg_database=<set your own>
+automationhub_pg_username=<set your own>
+automationhub_pg_password=<set your own>
+
+# {EDAcontroller}
+# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/rpm_installation/appendix-inventory-files-vars#event-driven-ansible-controller
+# -----------------------------------------------------
+automationedacontroller_admin_password=<set your own>
+automationedacontroller_pg_host=<set your own>
+automationedacontroller_pg_database=<set your own>
+automationedacontroller_pg_username=<set your own>
+automationedacontroller_pg_password=<set your own>
+----
