Converting overview draft into repo

--- a/downstream/modules/platform/proc-benchmark-postgresql.adoc
+++ b/downstream/modules/platform/proc-benchmark-postgresql.adoc
@@ -5,7 +5,7 @@
 Check whether the minimum {PlatformNameShort} PostgreSQL database requirements are met by using the Flexible I/O Tester (FIO) tool. FIO is a tool used to benchmark read and write IOPS performance of the storage system.
 
 .Prerequisites
- * You have installed the Flexible I/O Tester (`fio`) storage performance benchmarking tool. 
+* You have installed the Flexible I/O Tester (`fio`) storage performance benchmarking tool. 
 +
 To install `fio`, run the following command as the root user:
 +
@@ -64,5 +64,8 @@ read_iops: (g=0): rw=randread, bs=(R) 4096B-4096B, (W) 4096B-4096B, (T) 4096B-40
 […]
 ----
 +
-You must review, monitor, and revisit the log files according to your own business requirements, application workloads, and new demands.
+[NOTE]
+====
+The above is a baseline to help evaluate the best case performance on your systems. Systems can and will change and performance may vary depending on what else is happening on your systems, storage or network at the time of testing. You must review, monitor, and revisit the log files according to your own business requirements, application workloads, and new demands.
+====
 
