--- a/downstream/modules/platform/proc-enable-hstore-extension.adoc
+++ b/downstream/modules/platform/proc-enable-hstore-extension.adoc
@@ -18,7 +18,7 @@ If the `hstore` extension is not enabled before {HubName} installation, a failur
 $ psql -d <{HubName} database> -c "SELECT * FROM pg_available_extensions WHERE name='hstore'"
 ----
 +
-Where the default value for `<{HubName} database>` is `automationhub`.
+. Where the default value for `<{HubName} database>` is `automationhub`.
 
 +
 *Example output with `hstore` available*:
@@ -62,7 +62,7 @@ The output of which is:
 ----
 CREATE EXTENSION
 ----
-. In the following output, the `installed_version` field contains the `hstore` extension used, indicating that `hstore` is enabled.
+In the following output, the `installed_version` field contains the `hstore` extension used, indicating that `hstore` is enabled.
 +
 [options="nowrap" subs="+quotes,attributes"]
 ----
