--- a/downstream/modules/platform/ref-automation-hub-requirements.adoc
+++ b/downstream/modules/platform/ref-automation-hub-requirements.adoc
@@ -2,30 +2,8 @@
 
 = {HubNameStart} system requirements
 
-{HubNameStart} enables you to discover and use new certified automation content from Red Hat Ansible and Certified Partners. On {HubNameMain}, you can discover and manage Ansible Collections, which are supported automation content developed by Red Hat and its partners for use cases such as cloud automation, network automation, and security automation.
+{HubNameStart} allows you to discover and use new certified automation content from Red Hat Ansible and Certified Partners. On {HubNameMain}, you can discover and manage Ansible Collections, which are supported automation content developed by Red Hat and its partners for use cases such as cloud automation, network automation, and security automation.
 
-{HubNameStart} has the following system requirements:
-
-[cols="a,a,a"]
-|===
-h|Requirement | Required | Notes
-
-| *RAM* | 8 GB minimum |
-
-* 8 GB RAM (minimum and recommended for Vagrant trial installations)
-* 8 GB RAM (minimum for external standalone PostgreSQL databases)
-* For capacity based on forks in your configuration, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact].
-| *CPUs* | 2 minimum |
-
-For capacity based on forks in your configuration, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact].
-| *Local disk* | 60 GB disk | Dedicate a minimum of 40GB to `/var` for collection storage.
-
-|===
-
-[IMPORTANT]
-====
-Ansible automation execution nodes and automation hub system requirements are different and might not meet your network's needs. The general formula for determining how much memory you need is: Total control capacity = Total Memory in MB / Fork size in MB.
-====
 
 [NOTE]
 ====
