--- a/downstream/modules/platform/ref-ha-hub-reqs.adoc
+++ b/downstream/modules/platform/ref-ha-hub-reqs.adoc
@@ -11,7 +11,7 @@ The {PlatformName} installer returns an error if `/var/lib/pulp` is not detected
 
 If you receive an error stating `/var/lib/pulp` is not detected in one of your nodes, ensure `/var/lib/pulp` is properly mounted in all servers and re-run the installer.
 
-== Installing firewalld for network storage
+== Installing firewalld for HA hub deployment
 
 If you intend to install a HA {HubName} using a network storage on the {HubName} nodes itself, you must first install and use `firewalld` to open the necessary ports as required by your shared storage system before running the {PlatformNameShort} installer.
 
