--- a/downstream/modules/platform/ref-postgresql-requirements.adoc
+++ b/downstream/modules/platform/ref-postgresql-requirements.adoc
@@ -6,11 +6,6 @@
 
 To determine if your {ControllerName} instance has access to the database, you can do so with the command, `awx-manage check_db` command.
 
-.Database
-
-[cols="a,a,a",options="header"]
-|===
-h| Service |Required |Notes
 // [ddacosta - removed based on AAP-15617]| *Each {ControllerName}* | 40 GB dedicated hard disk space |
 
 //* Dedicate a minimum of 20 GB to `/var/` for file and working directory storage.
@@ -21,29 +16,21 @@ h| Service |Required |Notes
 // | *Each {HubName}* | 60 GB dedicated hard disk space |
 
 //Storage volume must be rated for a minimum baseline of 1500 IOPS.
-| *Database* | 
 
-* 20 GB dedicated hard disk space 
-* 4 CPUs 
-* 16 GB RAM |
+[NOTE]
+====
+* {ControllerNameStart} data is stored in the database.
+Database storage increases with the number of hosts managed, number of jobs run, number of facts stored in the fact cache, and number of tasks in any individual job. 
+For example, a playbook runs every hour (24 times a day) across 250 hosts, with 20 tasks, stores over 800000 events in the database every week.
 
-* 150 GB+ recommended
-* Storage volume must be rated for a high baseline IOPS (1500 or more).
-* All {ControllerName} data is stored in the database.
-Database storage increases with the number of hosts managed, number of jobs run, number of facts stored in the fact cache, and number of tasks in any individual job.
-For example, a playbook run every hour (24 times a day) across 250 hosts, with 20 tasks, will store over 800000 events in the database every week.
 * If not enough space is reserved in the database, the old job runs and facts must be cleaned on a regular basis. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-controller-management-jobs[Management Jobs] in the _Automation Controller Administration Guide_.
-|===
+====
 
 .PostgreSQL Configurations
 
-Optionally, you can configure the PostgreSQL database as separate nodes that are not managed by the {PlatformName} installer. When the {PlatformNameShort} installer manages the database server, it configures the server with defaults that are generally recommended for most workloads. For more information about the settings you can use to improve database performance, see link:https://docs.ansible.com/automation-controller/latest/html/administration/performance.html#database-settings[Database Settings].
-//-----
-//max_connections == 1024
-//shared_buffers == ansible_memtotal_mb*0.3
-//work_mem == ansible_memtotal_mb*0.03
-//maintenance_work_mem == ansible_memtotal_mb*0.04
-//-----
+Optionally, you can configure the PostgreSQL database as separate nodes that are not managed by the {PlatformName} installer.
+When the {PlatformNameShort} installer manages the database server, it configures the server with defaults that are generally recommended for most workloads.
+For more information about the settings you can use to improve database performance, see link:https://docs.ansible.com/automation-controller/latest/html/administration/performance.html#database-settings[Database Settings].
 
 [role="_additional-resources"]
 .Additional resources
