--- a/downstream/modules/platform/ref-system-requirements.adoc
+++ b/downstream/modules/platform/ref-system-requirements.adoc
@@ -4,7 +4,8 @@
 
 = {PlatformName} system requirements
 
-Your system must meet the following minimum system requirements to install and run {PlatformName}.
+Your system must meet the following minimum system requirements to install and run {PlatformName}. A resilient deployment requires 10 virtual machines with a minimum of 16 gigabytes(GB) of ram and 4 virtual cpus(vCPU). See, link:https://docs.google.com/document/d/1aGQ1vrVADmsI79kwnyeVq3moQvEvXn6Hal8dc3v9X80/edit#heading=h.w5f6jvdfs61x[Tested deployment models] for more information on topology options.
+
 
 .Base system
 
@@ -14,41 +15,46 @@ Your system must meet the following minimum system requirements to install and r
 
 h| Subscription | Valid {PlatformName} |
 
-h| OS | {RHEL} 8.8 or later 64-bit (x86, ppc64le, s390x, aarch64) |{PlatformName} is also supported on OpenShift, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/deploying_the_red_hat_ansible_automation_platform_operator_on_openshift_container_platform/index[Deploying the {PlatformName} operator on {OCPShort}] for more information.
+h| OS | {RHEL} 8.8 or later for {RHEL} 8 and 9.2 or later for {RHEL} 9 64-bit (x86, ppc64le, s390x, aarch64) |{PlatformName} is also supported on OpenShift, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/deploying_the_red_hat_ansible_automation_platform_operator_on_openshift_container_platform/index[Deploying the {PlatformName} operator on {OCPShort}] for more information.
 
 h| Ansible-core | Ansible-core version {CoreInstVers} or later | {PlatformNameShort} uses the system-wide ansible-core package to install the platform, but uses ansible-core {CoreUseVers} for both its control plane and built-in execution environments.
-
-h| Python | 3.11 or later |
-
-h| Browser | A currently supported version of Mozilla FireFox or Google Chrome |
 
 h| Database | PostgreSQL version 15 |
 
 |===
 
+.Virtual machine requirements
+
+[cols="a,a,a,a", options="header"]
+|===
+| Component                     | RAM   | VCPU   | Storage
+
+| Platform gateway               | 16GB  | 4      | 20GB minimum
+| Control nodes                  | 16GB  | 4      | 80GB minimum with at least 20GB available under `/var/lib/awx`
+| Execution nodes                | 16GB  | 4      | 40GB minimum
+| Hop nodes                      | 16GB  | 4      | 40GB minimum
+| {HubNameStart}                 | 16GB  | 4      | 40GB minimum allocated to `/var/lib/pulp`
+| Database                       | 16GB  | 4      | 100GB minimum allocated to `/var/lib/pgsql`
+| {EDAcontroller} | 16GB  | 4      | 40GB minimum
+|===
+
+[NOTE]
+====
+These are minimum requirements and can be increased for larger workloads in increments of 2x (for example 16GB becomes 32GB and 4 vCPU becomes 8vCPU). See the horizontal scaling guide for more information.
+====
+
 The following are necessary for you to work with project updates and collections:
 
 * Ensure that the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/ref-network-ports-protocols_planning[network ports and protocols] listed in _Table 5.3. Automation Hub_ are available for successful connection and download of collections from {HubName} or {Galaxy} server.
-* Disable SSL inspection either when using self-signed certificates or for the Red Hat domains.
-
-[NOTE]
-====
-The requirements for systems managed by {PlatformNameShort} are the same as for Ansible.
-See link:https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html#prerequisites[Installing Ansible] in the Ansible Community Documentation.
-====
 
 .Additional notes for {PlatformName} requirements
 
-* {PlatformName} depends on Ansible Playbooks and requires the installation of the latest stable version of ansible-core. You can download ansible-core manually or download it automatically as part of your installation of {PlatformName}.
-
-* For new installations, {ControllerName} installs the latest release package of ansible-core.
-
 * If performing a bundled {PlatformNameShort} installation, the installation setup.sh script attempts to install ansible-core (and its dependencies) from the bundle for you.
 
-* If you have installed Ansible manually, the {PlatformNameShort} installation setup.sh script detects that Ansible has been installed and does not attempt to reinstall it.
+* If you have installed Ansible-core manually, the {PlatformNameShort} installation setup.sh script detects that Ansible has been installed and does not attempt to reinstall it.
 
 [NOTE]
 ====
-You must install Ansible using a package manager such as `dnf`, and the latest stable version of the package manager must be installed for {PlatformName} to work properly.
+You must use Ansible-core, which is installed via dnf.
 Ansible-core version {CoreInstVers} is required for versions {PlatformVers} and later.
 ====
