Add Redis config info to containerized installer guide
Add product docs for containerized + clustered redis

https://issues.redhat.com/browse/AAP-28161

--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -187,6 +187,12 @@ bundle_install=true
 bundle_dir=<full path to the bundle directory>
 ----
 
+.Configuring Redis:
+* Redis can be colocated with any other node in a clustered installation.
+
+* By default the `redis_mode` is set to `cluster`. To run in `standalone` mode, set `redis_mode=standalone`.
+
+* For more information about Redis, see the _Caching and queueing system_ section of link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/planning_your_installation/index[{TitlePlanningGuide}].
 
 .Configuring a HAProxy load balancer
 
