--- a/downstream/archive/archived-titles/analytics/automation-savings/master.adoc
+++ b/downstream/archive/archived-titles/analytics/automation-savings/master.adoc
@@ -1,4 +1,4 @@
-// This assembly is included in the following assemblies:
+// This title has been archived due to consolidation of separate AA docs. See AAP-26519
 //
 
 :imagesdir: images
