--- a/downstream/archive/archived-titles/analytics/reports/master.adoc
+++ b/downstream/archive/archived-titles/analytics/reports/master.adoc
@@ -1,3 +1,5 @@
+// This title has been archived due to consolidation of separate AA docs. See AAP-26519
+
 :imagesdir: images
 :experimental:
 :toclevels: 4
