Update links in inventory files for containerized install
Containerized installer - implement hackathon docs feedback

https://issues.redhat.com/browse/AAP-30481

--- a/downstream/assemblies/platform/assembly-aap-containerized-installation.adoc
+++ b/downstream/assemblies/platform/assembly-aap-containerized-installation.adoc
@@ -31,14 +31,13 @@ include::snippets/container-upgrades.adoc[]
 * It is recommended that you set up SSH public key authentication for the non-root user. For guidelines on setting up SSH public key authentication for the non-root user, see link:https://access.redhat.com/solutions/4110681[How to configure SSH public key authentication for passwordless login].
 ** SSH keys are only required when installing on remote hosts. If doing a self contained local VM based installation, you can use *ansible_connection: local*.
 * Internet access from the {RHEL} host if you are using the default online installation method.
-* The appropriate network ports are open if a firewall is in place. For more information about the ports to open, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/supported_deployment_models_for_ansible_automation_platform[Container supported topologies] in _{TitleTopologies}_.
-
+* The appropriate network ports are open if a firewall is in place. For more information about the ports to open, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/supported_deployment_models/index#container-topologies[Container supported topologies] in _{TitleTopologies}_.
 
 == Supported deployment topologies
 
 Red Hat tests {PlatformNameShort} {PlatformVers} with a defined set of topologies to provide you with opinionated deployment options. The supported topologies include infrastructure topology, tested system configurations, example inventory files, and network ports information.
 
-For more information about the supported topologies for containerized {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/supported_deployment_models_for_ansible_automation_platform[Container supported topologies] in _{TitleTopologies}_.
+For more information about the supported topologies for containerized {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/supported_deployment_models/index#container-topologies[Container supported topologies] in _{TitleTopologies}_.
 
 
 == System requirements
