--- a/downstream/modules/topologies/ref-cont-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-a-env-a.adoc
@@ -95,7 +95,7 @@ aap.example.org
 [automationeda]
 aap.example.org
 
-# This section is for the database
+# This section is for the {PlatformNameShort} database
 # --------------------------------------
 [database]
 aap.example.org
