--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -13,7 +13,7 @@ h| Requirement | Required
 | *Local disk* a| 
 * Hard drive must be 40 GB minimum with at least 20 GB available under /var.
 * Storage volume must be rated for a minimum baseline of 1500 IOPS.
-* If the cluster has many large projects, consider doubling the GB in /var to avoid disk space errors.
+* If the cluster has many large projects or decision environment images, consider doubling the GB in /var to avoid disk space errors.
 |===
 
 [IMPORTANT]
