AAP-30395 Fix JSON example and update devtools attribute

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -111,7 +111,7 @@
 :Role: Role ARG Spec
 
 // Ansible developer tools
-:ToolsName: Ansible developer tools
+:ToolsName: Ansible development tools
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
 :RHDH: Red Hat Developer Hub
 :RHDHShort: RHDH
