--- a/downstream/modules/devtools/proc-devtools-install-container.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-container.adoc
@@ -46,7 +46,7 @@ You must use different settings depending on whether you are using Podman or Doc
     "ansible-dev-tools-container-storage:/var/lib/containers"
   ],
   "customizations": {
-    "VS Codevscode": {
+    "vscode": {
       "extensions": ["redhat.ansible"]
     }
   }
@@ -74,7 +74,7 @@ You must use different settings depending on whether you are using Podman or Doc
   ],
   "updateRemoteUserUID": true,
   "customizations": {
-    "VS Codevscode": {
+    "vscode": {
       "extensions": ["redhat.ansible"]
     }
   }
