AAP-30395 Fix JSON example and update devtools attribute (#1926)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -110,7 +110,7 @@
 :Role: Role ARG Spec
 
 // Ansible developer tools
-:ToolsName: Ansible developer tools
+:ToolsName: Ansible development tools
 :Test: Ansible-test
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
 :RHDH: Red Hat Developer Hub
