--- a/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
+++ b/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
@@ -8,7 +8,7 @@ After you have completed the installation of {PlatformNameShort}, ensure that {H
 
 Before your first login, you must add your subscription information to the platform. To obtain your subscription information in uploadable form, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-obtain-manifest-files#assembly-aap-obtain-manifest-files[Obtaining a manifest file] in the Access management and authentication guide.
 
-Once you have obtained your subscription manifest, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/getting_started/with/Ansible_automation_platform[{TitleGettingStarted}] for instructions on how to upload your subscription information.
+Once you have obtained your subscription manifest, see link:{URLGettingStarted}[{TitleGettingStarted}]for instructions on how to upload your subscription information.
 
 Now that you have successfully installed Ansible Automation Platform, to begin using its features, see the following guides for your next steps:
 
