--- a/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
+++ b/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
@@ -12,7 +12,7 @@ Once you have obtained your subscription manifest, see link:{URLGettingStarted}[
 
 Now that you have successfully installed Ansible Automation Platform, to begin using its features, see the following guides for your next steps:
 
-link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/getting_started/with/Ansible_automation_platform[{TitleGettingStarted}]
+link:{URLGettingStarted}[{TitleGettingStarted}]
 
 link:{LinkHubManagingContent}
 
