Adding changes to Ian's PR-1867 in his absence

--- a/downstream/modules/platform/proc-controller-configure-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-analytics.adoc
@@ -2,7 +2,7 @@
 
 = Configuring {Analytics}
 
-Configure {Analytics} on the *Subscription* page and the *System Settings* page of the *Settings* menu.
+When you imported your license for the first time, you were automatically opted in for the collection of data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
 
 .Procedure
 . From the navigation panel, select {MenuSetSubscription}.
@@ -13,15 +13,17 @@ image::automation_analytics.png[Automation analytics page]
 
 . From the navigation panel, select {MenuSetSystem}.
 . Click btn:[Edit].
-. On the *System Settings* page, select *Gather data for {Analytics}*.
+. Toggle the *Gather data for {Analytics}* switch and enter your Red Hat customer credentials.
 . You can also configure the following options:
-
++
 * *Red Hat Customer Name*: This username is used to send data to {Analytics}.
 * *Red Hat Customer Password*: This password is used to send data to {Analytics}.
 * *Red Hat or Satellite Username*: This username is used to send data to {Analytics}.
 * *Red Hat or Satellite password*: This password is used to send data to {Analytics}.
 * *Last gather date for Automation Analytics*: Set the date and time
 * *Automation Analytics Gather Interval*: Interval (in seconds) between data gathering.
++
+. Click btn:[Save].
 //This field has been removed.
 //* *Last gathered entries from the data collection service of {Analytics}*: TBD
 
