--- a/downstream/modules/platform/ref-controller-automation-analytics.adoc
+++ b/downstream/modules/platform/ref-controller-automation-analytics.adoc
@@ -2,7 +2,7 @@
 
 = {Analytics}
 
-When you imported your license for the first time, you were given the option of collecting data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
+When you imported your license for the first time, you were automatically opted in for the collection of data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
 
 [IMPORTANT]
 ====
@@ -12,7 +12,7 @@ For opt-in of {Analytics} to have any effect, your instance of {ControllerName} 
 As with Red Hat Insights, {Analytics} is built to collect the minimum amount of data needed.
 No credential secrets, personal data, automation variables, or task output is gathered.
 
-To enable this feature, see xref:proc-controller-configure-analytics[Configuring {Analytics}].
+When you imported your license for the first time, you were automatically opted in to {Analytics}. To configure or disable this feature, see xref:proc-controller-configure-analytics[Configuring {Analytics}].
 
 By default, the data is collected every four hours.
 When you enable this feature, data is collected up to a month in arrears (or until the previous collection).
