--- a/downstream/modules/platform/ref-controller-content-sourcing.adoc
+++ b/downstream/modules/platform/ref-controller-content-sourcing.adoc
@@ -28,6 +28,6 @@ The organization's *Add* and *Edit* windows have an optional *Credential* lookup
 image:organizations-galaxy-credentials.png[Create organization]
 
 It is important to specify the order of these credentials as order sets precedence for the sync and lookup of the content. 
-For more information, see link:{BaseURL}red_hat_ansible_automation_platform/{PlatfomVers}/html-single/access_management_and_authentication/index#proc-controller-create-organization[Creating an organization]. 
+For more information, see link:{URLCentralAuth}/index#proc-controller-create-organization[Creating an organization]. 
 
 For more information about how to set up a project by using collections, see xref:proc-projects-using-collections-with-hub[Using Collections with {HubName}].
