--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -21,9 +21,11 @@ For more information about these and other Ansible concepts, see the link:https:
 include::{Boilerplate}[]
 
 include::platform/assembly-UG-overview.adoc[leveloffset=+1]
-include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
+//Moved to Access management doc
+//include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
 include::platform/assembly-controller-login.adoc[leveloffset=+1]
-include::platform/assembly-controller-managing-subscriptions.adoc[leveloffset=+1]
+//Moved to Access management doc
+//include::platform/assembly-controller-managing-subscriptions.adoc[leveloffset=+1]
 //Rewritten for 2.5
 include::platform/assembly-controller-user-interface.adoc[leveloffset=+1]
 include::platform/assembly-controller-search.adoc[leveloffset=+1]
@@ -56,7 +58,7 @@ include::platform/assembly-controller-instances.adoc[leveloffset=+1]
 include::platform/assembly-controller-execution-environments.adoc[leveloffset=+1]
 include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
 //Moved to Donna's Access management document
-//include::platform/assembly-controller-organizations.adoc[leveloffset=+1
+//include::platform/assembly-controller-organizations.adoc[leveloffset=+1]
 //include::platform/assembly-controller-users.adoc[leveloffset=+1]
 //include::platform/assembly-controller-teams.adoc[leveloffset=+1]
 //Possibly in Donna's credentials document
