--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -24,7 +24,7 @@ If you want to give any user or team permissions to use a job template, you can 
 An auditor is useful for a service account that scrapes automation information from the REST API.
 
 .Additional resources
-* For more information about user roles, see link:{BaseURL}}red_hat_ansible_automation_platform/{PlatformVers}/html-single/access_management_and_authentication/index#gw-managing-access[Managing access with role based access control].
+* For more information about user roles, see link:{URLCentralAuth}/index#gw-managing-access[Managing access with role based access control].
 
 = Cloud and autoscaling flexibility
 {ControllerNameStart} includes a powerful optional provisioning callback feature that enables nodes to request configuration on-demand.
