--- a/downstream/modules/platform/ref-controller-analytics-reports.adoc
+++ b/downstream/modules/platform/ref-controller-analytics-reports.adoc
@@ -1,14 +1,22 @@
 [id="ref-controller-analytics-reports"]
 
 = Analytics Reports
+//[ddacosta - removed to reflect current environment but this might be updated in the product later and this statement could be added back.]
+//Reports from collection are accessible through the {ControllerName} UI if you have superuser-level permissions.
+//By including the analytics view on-prem where it is most convenient, you can access data that can affect your day-to-day work.
+//This data is aggregated from the automation provided on link:https://console.redhat.com[{Console}].
 
-Reports from collection are accessible through the {ControllerName} UI if you have superuser-level permissions.
-By including the analytics view on-prem where it is most convenient, you can access data that can affect your day-to-day work.
-This data is aggregated from the automation provided on link:https://console.redhat.com[{Console}].
+Reports for data collected are available through link:https://console.redhat.com[{Console}].
 
-Currently available is a view-only version of the Automation Calculator utility that shows a report that represents (possible) savings to the subscriber.
+Other {Analytics} data currently available and accessible through the platform UI include the following:
+
+*Automation Calculator* is a view-only version of the Automation Calculator utility that shows a report that represents (possible) savings to the subscriber.
 
 image:aa-automation-calculator.png[Automation calculator]
+
+*Host Metrics* is an analytics report collected for host data such as, when they were first automated, when they were most recently automated, how many times they were automated, and how many times each host has been deleted.
+
+*Subscription Usage* reports the historical usage of your subscription. Subscription capacity and licenses consumed per month are displayed, with the ability to filter by the last year, two years, or three years.
 
 //I don't think this is included
 //[NOTE]
