Include peer review fixes for PR 1933

--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -30,7 +30,7 @@ ifdef::controller-UG[]
 For more information, see xref:controller-instance-group-capacity[Instance group capacity limits].
 endif::controller-UG[]
 ifdef::operator-mesh[]
-For more information, see link:link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/using_automation_execution/assembly-controller-secret-management#controller-instance-group-capacity[Instance group capacity limits].
+For more information, see link:{URLControllerUserGuide}/index#controller-instance-group-capacity[Instance group capacity limits].
 endif::operator-mesh[]
 ====
 
